# fastapi-sqlalchemy-bug-example

./: .env.example  README.md  docker-compose.yml
app/: Dockerfile  main.py  pyproject.toml
app/src/: db.py  settings.py  tables.py
