[tool.poetry]
name = "fastapi_sqalchemy_error"
version = "0.1.0"
description = ""
authors = ["Grigoriy <grigoriy.program@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = "^0.25.0"
fastapi = "^0.75.0"
sqlmodel = "^0.0.6"
uvicorn = "^0.17.5"
SQLAlchemy = "^1.4.36"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
